--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -11,7 +11,7 @@ Local semantic code search for Cursor and Claude Code via MCP.
 [Get Started](/docs) · [View on GitHub](https://github.com/lytics/dev-agent)
 
 <Callout type="info">
-  **v0.4.3** — Now with git history search (`dev_history`), change frequency in `dev_map`, and improved tool descriptions. [See what's new →](https://github.com/lytics/dev-agent/releases)
+  **v0.4.4** — Search results now show related test files automatically. [See what's new →](https://github.com/lytics/dev-agent/releases)
 </Callout>
 
 <Callout type="default">
