chore: add changeset for v0.5.0 and update documentation
Changeset:
- Add changeset for minor version bump (→ 0.5.0)
- Bumps @lytics/dev-agent-core and @lytics/dev-agent

Scanner docs:
- Update README with new DocumentType 'variable' and metadata fields
- Document isArrowFunction, isHook, isAsync, isConstant, constantKind

Website docs:
- Add 'New in v0.5.0' section to tools index
- Update dev_search with v0.5 markers for new extraction types
- Update quickstart with expanded extraction list

--- a/website/content/docs/quickstart.mdx
+++ b/website/content/docs/quickstart.mdx
@@ -71,7 +71,7 @@ Try these prompts:
 When you run `dev index .`:
 
 1. **Scanner** parses your code using the TypeScript Compiler API
-2. **Extractor** identifies functions, classes, interfaces, types
+2. **Extractor** identifies functions, classes, interfaces, types, arrow functions, hooks, and exported constants
 3. **Embedder** generates vector embeddings locally (MiniLM-L6-v2)
 4. **Storage** saves everything to LanceDB (`~/.dev-agent/indexes/`)
 
