--- a/website/content/docs/tools/index.mdx
+++ b/website/content/docs/tools/index.mdx
@@ -16,7 +16,12 @@ dev-agent provides nine tools through the Model Context Protocol (MCP). These to
 | [`dev_status`](/docs/tools/dev-status) | Check repository indexing status |
 | [`dev_health`](/docs/tools/dev-health) | Monitor MCP server health |
 
-## New in v0.4.0
+## New in v0.5.0
+
+- **Enhanced indexing** — Arrow functions, React hooks, and exported constants now extracted
+- **`dev_search`** — Better coverage of modern JavaScript patterns (hooks, utilities, configs)
+
+## v0.4.0
 
 - **`dev_history`** — Semantic search over git commit history
 - **`dev_map`** — Change frequency indicators (🔥 hot, ✏️ active, 📝 recent)
