--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -11,7 +11,7 @@ Local semantic code search for Cursor and Claude Code via MCP.
 [Get Started](/docs) · [View on GitHub](https://github.com/lytics/dev-agent)
 
 <Callout type="info">
-  **v0.4.4** — Search results now show related test files automatically. [See what's new →](https://github.com/lytics/dev-agent/releases)
+  **v0.5.0 coming soon** — Arrow functions, React hooks, and exported constants now indexed. [See what's new →](/updates)
 </Callout>
 
 <Callout type="default">
