feat(website): make homepage callout dynamic from latest version
Create single source of truth for latest version information that drives
both the homepage callout and serves as a reminder when adding new updates.

Changes:
- Add website/content/latest-version.ts with version metadata
- Import latestVersion in homepage to dynamically show version
- Add comment to updates page to remind updating the version file

Benefits:
- Only one place to update when releasing new versions
- Homepage automatically reflects latest version
- Reduces chance of homepage getting out of sync with updates page

--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -3,6 +3,7 @@ title: dev-agent
 ---
 
 import { Callout, Steps, Tabs, FileTree } from 'nextra/components'
+import { latestVersion } from './latest-version'
 
 # dev-agent
 
@@ -11,7 +12,7 @@ Local semantic code search for Cursor and Claude Code via MCP.
 [Get Started](/docs) · [View on GitHub](https://github.com/lytics/dev-agent)
 
 <Callout type="info">
-  **New in v0.5.1** — Incremental indexing! Only re-index files that actually changed. [See what's new →](/updates)
+  **New in v{latestVersion.version}** — {latestVersion.summary} [See what's new →](/updates)
 </Callout>
 
 <Callout type="default">
