--- a/website/content/updates/index.mdx
+++ b/website/content/updates/index.mdx
@@ -1,5 +1,10 @@
 # Updates
 
+{/* 
+  When adding a new version below, also update ../latest-version.ts
+  so the homepage callout stays in sync.
+*/}
+
 What's new in dev-agent. We ship improvements regularly to help AI assistants understand your code better.
 
 ---
