--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -201,9 +201,10 @@ dev mcp install           # For Claude Code
 
 - **Context Bundling** — `dev_plan` replaces 5-10 tool calls with one
 - **Code Snippets** — Search returns code, not just file paths
+- **Multi-Language** — TypeScript, JavaScript, Go, Markdown
 - **100% Local** — Your code never leaves your machine
 - **Sub-second Search** — Fast even on large repos with LanceDB
-- **1379+ Tests** — Production-grade reliability
+- **1500+ Tests** — Production-grade reliability
 
 ---
 
