docs: comprehensive documentation and changeset for v0.6.1 release
- Add missing 'dev update' command to CLI documentation (README and website)
- Document performance tuning environment variables in configuration
- Add timing expectations for indexing (5-10 minutes for large codebases)
- Create v0.6.1 release notes covering reliability and performance improvements
- Update website latest version to v0.6.1
- Add comprehensive changeset for patch release covering:
  * Performance configuration with environment variables
  * Enhanced Go scanner reliability and WASM validation
  * Better error handling and logging across scanners
  * 57 new tests and architectural improvements
  * Documentation enhancements and user experience improvements

This properly documents all the improvements merged in the recent comprehensive
Go support enhancement PR, categorized as a patch release (0.6.1) since it
improves the Go feature introduced in 0.6.0 rather than adding new features.

--- a/website/content/docs/cli.mdx
+++ b/website/content/docs/cli.mdx
@@ -24,6 +24,8 @@ Creates a `.dev-agent.json` configuration file with default settings.
 
 Index your repository for semantic search. Indexes code, git history, and GitHub issues/PRs.
 
+*Note: Initial indexing can take 5-10 minutes for large codebases (4k+ files).*
+
 ```bash
 dev index .
 dev index /path/to/repo
@@ -153,16 +155,17 @@ dev git stats
 
 ### `dev update`
 
-Incrementally update the index with changed files.
+Incrementally update the index with changed files. Much faster than full indexing - typically completes in seconds.
 
 ```bash
 dev update
+dev update -v  # Show what files changed
 ```
 
 **Options:**
 | Flag | Description |
 |------|-------------|
-| `-v, --verbose` | Show verbose output |
+| `-v, --verbose` | Show verbose output and which files changed |
 
 ### `dev stats`
 
