fix: escape angle brackets in MDX files to prevent build errors
Fix Next.js build failure caused by unescaped < characters in markdown tables.
MDX interprets < as HTML tag start, causing parse errors. Changed:
- 'Low memory (<4GB)' -> 'Low memory (under 4GB)'
- 'Memory-conservative systems (<4GB RAM)' -> 'Memory-conservative systems (under 4GB RAM)'

This resolves the webpack compilation error in configuration.mdx.

--- a/website/content/docs/configuration.mdx
+++ b/website/content/docs/configuration.mdx
@@ -108,7 +108,7 @@ Control scanning and indexing performance using environment variables:
 
 | System Type | Global | TypeScript | Indexer | Notes |
 |-------------|--------|------------|---------|-------|
-| Low memory (<4GB) | 5 | 5 | 2 | Prevents OOM errors |
+| Low memory (under 4GB) | 5 | 5 | 2 | Prevents OOM errors |
 | Standard (4-8GB) | 15 | 15 | 3 | Balanced performance |
 | High-end (8GB+, 8+ cores) | 30 | 30 | 5 | Maximum speed |
 
