--- a/website/content/updates/index.mdx
+++ b/website/content/updates/index.mdx
@@ -26,7 +26,7 @@ Fine-tune scanning and indexing performance with environment variables:
 export DEV_AGENT_TYPESCRIPT_CONCURRENCY=30
 export DEV_AGENT_INDEXER_CONCURRENCY=8
 
-# Memory-conservative systems (<4GB RAM)
+# Memory-conservative systems (under 4GB RAM)
 export DEV_AGENT_CONCURRENCY=5
 export DEV_AGENT_INDEXER_CONCURRENCY=2
 
