docs: enhance CLI help text with examples and context
Add comprehensive help text to major commands with:
- Real-world examples with actual command syntax
- Clear descriptions of what users will see
- Related commands and tools
- Setup instructions (for mcp)
- Storage structure explanation (for storage)

Commands Enhanced:
- dev github --help    Examples, related MCP tool info
- dev mcp --help       Setup steps, 9 available tools list
- dev stats --help     What statistics are shown
- dev storage --help   Storage location and structure

Impact:
- Improves discoverability without external docs
- Always available (no website needed)
- Context-aware help for each command
- Zero maintenance (lives with code)

Completes Option 1 from CLI documentation strategy.
Next: CLI Quickstart page (separate PR)

--- a/website/content/docs/architecture.mdx
+++ b/website/content/docs/architecture.mdx
@@ -63,7 +63,7 @@ Command-line interface:
 ```bash
 dev index .              # Index repository
 dev mcp install          # Install MCP integration
-dev gh index             # Index GitHub issues/PRs
+dev github index             # Index GitHub issues/PRs
 dev status               # Check indexing status
 ```
 
