--- a/website/content/docs/cli.mdx
+++ b/website/content/docs/cli.mdx
@@ -108,13 +108,13 @@ Index and search GitHub issues/PRs.
 
 ```bash
 # Index GitHub metadata (also done by dev index)
-dev gh index
+dev github index
 
 # Search issues/PRs
-dev gh search "authentication bug"
+dev github search "authentication bug"
 
 # Get context for an issue
-dev gh context --issue 42
+dev github context --issue 42
 ```
 
 ### `dev git`
