--- a/website/content/docs/troubleshooting.mdx
+++ b/website/content/docs/troubleshooting.mdx
@@ -110,7 +110,7 @@ Adjust score threshold:
 
 ## GitHub Integration
 
-### `dev gh index` fails
+### `dev github index` fails
 
 ```bash
 # Check GitHub CLI
@@ -123,7 +123,7 @@ gh auth login
 ### Stale GitHub data
 
 ```bash
-dev gh index  # Re-index
+dev github index  # Re-index
 ```
 
 ## Quick Fixes
@@ -133,7 +133,7 @@ dev gh index  # Re-index
 ```bash
 rm -rf ~/.dev-agent/indexes/*
 dev index .
-dev gh index
+dev github index
 dev mcp install --cursor
 ```
 
